Fixed z-index for selectors on mobile

--- a/src/styles/calendar/_selectors.sass
+++ b/src/styles/calendar/_selectors.sass
@@ -44,6 +44,7 @@
     background: var.$white
     box-shadow: var.$shadow-xs
     margin-top: 4px
+    z-index: 1
 
   .dropdown-item
     display: block
